# VulkanRAIIWrapper

./: .clang-tidy  .gitignore  .vcpkg-configuration.json  CMakeLists.txt  README.md  vcpkg.json
cmake/: BuildConfig.cmake  ClangTidyAllParallel.cmake  ShaderUtils.cmake  toolchain.cmake
src/: CMakeLists.txt
src/RAII/: CMakeLists.txt  Library_impl.cpp  SDL2Application.cpp  SDL2Application.hpp  SDL3Application.cpp  SDL3Application.hpp  VulkanRAII.hpp
src/RAII/core/: DebugMessenger.cpp  DebugMessenger.hpp  Device.cpp  Device.hpp  Instance.cpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Queue.cpp  Queue.hpp  instance.hpp
src/RAII/examples/: SDL2Example.hpp
src/RAII/presentation/: Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp
src/RAII/rendering/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Framebuffer.cpp  Framebuffer.hpp  Pipeline.cpp  Pipeline.hpp  PipelineStructs.cpp  PipelineStructs.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp
src/RAII/resources/: Buffer.cpp  Buffer.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Image.cpp  Image.hpp  PipelineLayout.cpp  PipelineLayout.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  VmaAllocator.cpp  VmaAllocator.hpp
src/RAII/sync/: Event.cpp  Event.hpp  Fence.cpp  Fence.hpp  Semaphore.cpp  Semaphore.hpp
src/RAII/types/: QueueFamilyIndices.cpp  QueueFamilyIndices.hpp
src/RAII/utils/: CapabilityUtils.cpp  CapabilityUtils.hpp  Constants.cpp  Constants.hpp  DebugUtils.cpp  DebugUtils.hpp  FormatUtils.cpp  FormatUtils.hpp  ImageUtils.cpp  ImageUtils.hpp  MemoryUtils.cpp  MemoryUtils.hpp  PipelineUtils.cpp  PipelineUtils.hpp  SDLUtils.cpp  SDLUtils.hpp  Timer.cpp  Timer.hpp  VulkanUtils.cpp  VulkanUtils.hpp
tests/: CMakeLists.txt  test_timer.cpp
